@@ -123,5 +123,20 @@ def type_annotation_used_after_comprehension():
 
 def type_annotation_unused_after_comprehension():
     """https://github.com/PyCQA/pylint/issues/5326"""
+    my_int: int  # [unused-variable]
+    _ = [print(sep=my_int, end=my_int) for my_int in range(10)]
+
+
+def type_annotation_used_improperly_after_comprehension():
+    # TO-DO follow up in https://github.com/PyCQA/pylint/issues/5713
+    """https://github.com/PyCQA/pylint/issues/5654"""
     my_int: int
-    _ = [print(kwarg1=my_int, kwarg2=my_int) for my_int in range(10)]
+    _ = [print(sep=my_int, end=my_int) for my_int in range(10)]
+    print(my_int)  # [undefined-variable]
+
+
+def type_annotation_used_improperly_after_comprehension_2():
+    """Same case as above but with positional arguments"""
+    my_int: int
+    _ = [print(my_int, my_int) for my_int in range(10)]
+    print(my_int)  # [undefined-variable]
